...
                    shape: const RoundedRectangleBorder(
                      borderRadius: BorderRadius.all(Radius.circular(2)),
                    ),
                  ),
                  child: Text(
                    _page == 4
                        ? (pt ? 'Criar memória local' : 'Create local memory')
                        : (pt ? 'Continuar' : 'Continue'),
                  ),
                ),
              ),
            ),
          ],
        ),
...
